--- a/src/main/resources/public/src/scss/document/_form.scss
+++ b/src/main/resources/public/src/scss/document/_form.scss
@@ -2,15 +2,15 @@
 // 툴팁 border 초기화
 $tooltip-type: (group, row, component);
 @each $type in $tooltip-type {
-  .zenius-#{$type}-tooltip {
+  .#{$common-prefix}#{$type}-tooltip {
     @include border(0.0625rem, solid, $drawing-board-bg-color, all); // 1px
   }
 }
 
-.zenius-group {
+.#{$common-prefix}group {
   &.accordion {
-    .zenius-group-accordion-checkBox:checked {
-      ~ .zenius-row-tooltip:not(.off):last-child {
+    .#{$common-prefix}group-accordion-checkBox:checked {
+      ~ .#{$common-prefix}row-tooltip:not(.off):last-child {
         @include border(0.0625rem, solid, map-get($grays, "line"), bottom); // 1px
       }
     }
