--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -77,6 +77,9 @@ $oranges: (
   'light':                                    #FF850A
 ) !default;
 
+// common prefix
+$common-prefix:                               'z-';
+
 // element default
 $element-font-size:                           $font-size-base;
 $element-font-color:                          map-get($grays, 'dark');
