--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -20,7 +20,7 @@
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/js/util/fileuploader-alice.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
-    <script th:src="@{/assets/vendors/toastify/toastify-custom.js}"></script>
+    <script th:src="@{/assets/vendors/toastify/toastify.custom.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/util/validation-alice.js}"></script>
     <script th:src="@{/assets/js/util/tree-alice.js}"></script>
