--- a/src/main/resources/public/template/layout/fragments/commonPortalHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonPortalHead.html
@@ -17,7 +17,7 @@
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/js/util/fileuploader-alice-portal.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
-    <script th:src="@{/assets/vendors/toastify/toastify-custom.js}"></script>
+    <script th:src="@{/assets/vendors/toastify/toastify.custom.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/util/validation-alice.js}"></script>
     <script type="text/javascript">
