#10660 [SCSS 개선] ITSM - mixins, function 적용
- 미사용 디렉토리 proto 제거

--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -124,7 +124,7 @@ table[id="documentDisplay"] {
   display: inline-block;
   max-width: 13.75rem; // 220px
   color: $tag-font-color;
-  border-radius: 0.0625rem; // 1px
+  @include borderRadius(0.0625rem); // 1px
   padding: 0.3125rem 0.9375rem; // 5px 15px
   background-color: $tag-bg-color;
   margin: 0.3125rem; // 5px
