--- a/src/main/resources/public/src/scss/theme/default/_popup.scss
+++ b/src/main/resources/public/src/scss/theme/default/_popup.scss
@@ -6,17 +6,17 @@
 .itsm-popup {
   width: 100%;
   height: 100vh;
-  background-color: $white;
   padding: 1.875rem 2.5rem 1.25rem 2.5rem; // 30px 40px 20px 40px
+  background-color: $white;
 
   .popup-title {
-    color: $view-sub-title-font-color;
     margin-bottom: 1.75rem; //26px
+    color: $view-sub-title-font-color;
   }
 
   &-btn-content {
     margin-top: 2rem; //32px
-    border-top: 0.0625rem solid map-get($grays, "default"); //1px
+    @include border(0.0625rem, solid, map-get($grays, "default"), top); //1px
   }
 
   &-btn-list {
