--- a/src/main/resources/public/src/scss/theme/default/_reply.scss
+++ b/src/main/resources/public/src/scss/theme/default/_reply.scss
@@ -9,9 +9,9 @@
   }
   &-input-row {
     padding: 1.3125rem 1.25rem; // 21px 20px
+    @include border(0.0625rem, solid, map-get($grays, "line"), top);
+    @include border(0.0625rem, solid, map-get($grays, "line"), bottom);
     background-color: map-get($grays, "light");
-    border-top: 0.0625rem solid map-get($grays, "line");
-    border-bottom: 0.0625rem solid map-get($grays, "line");
     .reply-input {
       width: 100%;
       margin: 0 0.3125rem; // 5px
@@ -23,7 +23,7 @@
 
   &-list {
     padding: 0 0;
-    border-bottom: 0.0625rem solid map-get($grays, "line");
+    @include border(0.0625rem, solid, map-get($grays, "line"), bottom);
     @include verticalBar(1.25rem, 1.25rem, 0.0625rem solid map-get($grays, "line"), 0.0625rem 0.9375rem 0.0625rem 0);
     .reply {
       &-info {
@@ -42,9 +42,9 @@
       }
       &-comment {
         display: flex;
-        word-break: break-all;
         margin-top: 0.9375rem; // 5px
         margin-left: 3rem; // 48px
+        word-break: break-all;
         input {
           width: 100%;
           margin: 0 0.3125rem; // 5px
@@ -56,7 +56,7 @@
   .profile-photo {
     flex : none;
     margin: auto 0.9376rem auto 0; // 15px
-    border-radius: 50%;
+    @include borderRadius(50%);
     background-color: $profile-photo-background;
   }
 
