js 파일명 수정 - cmdb 쪽

--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -72,8 +72,8 @@
 </body>
 <th:block layout:fragment="pageScript">
     <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
-    <script th:src="@{/assets/js/cmdb/cmdb.core.js}"></script>
-    <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
+    <script th:src="@{/assets/js/cmdb/core.js}"></script>
+    <script th:src="@{/assets/js/cmdb/attribute.js}"></script>
     <script type="text/javascript">
         (function() {
             cmdb.initSession(JSON.stringify({
