--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -16,7 +16,7 @@
     <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
     <script th:src="@{/assets/js/util/colorPalette-alice.js}"></script>
     <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
-    <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
+    <script th:src="@{/assets/js/cmdb/attribute.js}"></script>
     <script type="module">
         // 사용자 세션 정보 저장
         import { SESSION } from '../../assets/js/lib/constants.js';
