#10683 CI쪽 태그 기능을 공통 태그 함수 사용 및 디자인 적용

--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -62,7 +62,7 @@
                 <label class="field-label">
                     <span th:text="#{cmdb.ci.label.tag}"></span>
                 </label>
-                <input type="text" id="tags" name="tags" class="col-pct-12 inherit" th:value="|${tags}|" readonly/>
+                <input type="text" id="tags" name="ciDetailTags" class="col-pct-12 inherit" th:value="|${tags}|" readonly/>
             </div>
             <!-- 세부속성 -->
             <div class="flex-column view-row">
