documentEditor 파일명 수정. -> zDocument로 Export

--- a/src/main/resources/public/template/document/documentList.html
+++ b/src/main/resources/public/template/document/documentList.html
@@ -13,7 +13,7 @@
     </div>
     <th:block th:fragment="list">
         <div class="card" th:unless="${#arrays.isEmpty(documentList)}" th:each="document: ${documentList}"
-             sec:authorize="hasAuthority('document.create')" th:onclick="documentEditor.openDocument([[${document.documentId}]])">
+             sec:authorize="hasAuthority('document.create')" th:onclick="zDocument.openDocument([[${document.documentId}]])">
             <div class="document-column">
                 <h3 th:text="${document.documentName}" class="text-ellipsis"></h3>
                 <label th:text="${document.documentDesc}" class="document-description text-ellipsis"></label>
