--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -66,11 +66,11 @@
 </body>
 <th:block layout:fragment="pageScript">
     <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
-    <script th:src="@{/assets/js/cmdb/core.js}"></script>
-    <script th:src="@{/assets/js/cmdb/attribute.js}"></script>
+    <script th:src="@{/assets/js/cmdb/zCmdbCore.js}"></script>
+    <script th:src="@{/assets/js/cmdb/zCmdbAttribute.js}"></script>
     <script type="text/javascript">
         (function() {
-            cmdb.initSession(JSON.stringify({
+            zCmdbCore.initSession(JSON.stringify({
                 userKey : '[[${#authentication.details.userKey}]]',
                 userId : '[[${#authentication.details.userId}]]',
                 userName: '[[${#authentication.details.userName}]]',
@@ -88,10 +88,10 @@
         window.onload = function () {
             const attributeType = /*[[${attribute?.attributeType}]]*/ null;
             let attributeTypeObject = document.querySelector('#attributeType');
-            for (let i = 0; i < attribute.attributeTypeList.length; i++) {
+            for (let i = 0; i < zCmdbAttribute.attributeTypeList.length; i++) {
                 const option = document.createElement('option');
-                option.text = attribute.attributeTypeList[i].name
-                option.value = attribute.attributeTypeList[i].type
+                option.text = zCmdbAttribute.attributeTypeList[i].name
+                option.value = zCmdbAttribute.attributeTypeList[i].type
                 if (attributeType != null && option.value === attributeType) {
                     option.setAttribute('selected', 'true');
                 }
@@ -99,7 +99,7 @@
             }
 
             // Attribute Details
-            attribute.init(document.querySelector('#details'));
+            zCmdbAttribute.init(document.querySelector('#details'));
             changeType(attributeTypeObject, true);
 
             aliceJs.initDesignedSelectTag();
@@ -127,7 +127,7 @@
             if (isInit) {
                 data = JSON.parse(attributeData);
             }
-            attribute.makeDetails(object.value, data);
+            zCmdbAttribute.makeDetails(object.value, data);
         }
         /*]]>*/
     </script>
